[metadata]
name = emusica
version = 0.0.1
author= MGCcoder
description = Extrae música que está unida en un solo archivo y agrega sus metadatos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MGCcoder/extractor-de-musica
classifiers =
    Programming Language :: Python :: 3
    License :: OS Approved :: MIT License
    Operating System :: Unix

[options]
package = find:
python_requires = >=3.10.6
